--- a/python_intro.ipynb
+++ b/python_intro.ipynb
@@ -1147,6 +1147,24 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Some questions to try yourself**\n",
+        "1. Write a for loop to print the first 10 Fibonacci numbers. (F(n+1)=F(n)+F(n-1))\n",
+        "2. Generate a list of 100 random numbers and calculate the 25th, 50th, and 75th percentiles using numpy.\n",
+        "(Hint: Use ```np.percentile()``` function of ```numpy``` module.)\n",
+        "3. Generate synthetic linear data (y = 2x + noise), fit a linear regression model, and plot the regression line.\n",
+        "(Hint: Import ```LinearRegression``` function from ```sklearn.linear_model``` module. Use ```model=LinearRegression()``` to initialize and ```model.fit(X,Y)``` to fit the model and ```model.predict(X)``` to predict.\n",
+        "4. Apply PCA to the Iris dataset and plot the first two principal components. Explain how much variance is explained by the first two components.\n",
+        "5. Simulate rolling two dice 1000 times and plot the distribution of the sum of the two dice.\n",
+        "(Hint: use ```np.random.randint(l, u, n)``` to simulate dice roll.)\n",
+        "6. Create a pandas DataFrame with student names, marks, and subjects and filter students with marks > 70 and calculate the average mark.\n"
+      ],
+      "metadata": {
+        "id": "2Ym5gS4J_LAD"
+      }
     }
   ]
 }
