--- a/python_intro.ipynb
+++ b/python_intro.ipynb
@@ -1151,6 +1151,179 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Linear Model**"
+      ],
+      "metadata": {
+        "id": "0goM0Mv3rT8Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "\n",
+        "iris = load_iris()\n",
+        "X = iris.data[:, :2]\n",
+        "y = iris.data[:, 2]\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "\n",
+        "\n",
+        "model = LinearRegression()\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred = model.predict(X_test)\n",
+        "\n",
+        "print(\"Coefficients:\", model.coef_)\n",
+        "print(\"Intercept:\", model.intercept_)\n",
+        "print(\"Mean Squared Error:\", mean_squared_error(y_test, y_pred))\n",
+        "print(\"R² Score:\", r2_score(y_test, y_pred))\n",
+        "\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.scatter(y_test, y_pred, color='blue', label='Predicted vs Actual', alpha=0.7)\n",
+        "plt.plot([min(y_test), max(y_test)], [min(y_test), max(y_test)], color='red', lw=2, label='Regression Line')\n",
+        "plt.xlabel('Actual Petal Length (cm)')\n",
+        "plt.ylabel('Predicted Petal Length (cm)')\n",
+        "plt.title('Actual vs Predicted Petal Length (Linear Regression)')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "jaV5FYl1rXqq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**OOP**"
+      ],
+      "metadata": {
+        "id": "bN96fc-4e_u-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Dog:\n",
+        "    def __init__(self, name, breed):\n",
+        "        self.name = name\n",
+        "        self.breed = breed\n",
+        "\n",
+        "    def bark(self):\n",
+        "        print(f\"{self.name} says Woof!\")\n",
+        "\n",
+        "# Create an object\n",
+        "my_dog = Dog(\"Buddy\", \"Golden Retriever\")\n",
+        "my_dog.bark()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Jv6KZZAfBPj",
+        "outputId": "7708f4aa-f1f1-4b69-d9d5-5c33060ddad9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Buddy says Woof!\n",
+            "<__main__.Dog object at 0x79223fcd21d0>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Rectangle:\n",
+        "    def __init__(self, width, height):\n",
+        "        self.width = width\n",
+        "        self.height = height\n",
+        "\n",
+        "    def area(self):\n",
+        "        return self.width * self.height\n",
+        "\n",
+        "r1 = Rectangle(5, 10)\n",
+        "print(\"Area:\", r1.area())\n"
+      ],
+      "metadata": {
+        "id": "NpkndKhifK9m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    def __init__(self, name):\n",
+        "        self.name = name\n",
+        "        self.marks = []\n",
+        "\n",
+        "    def add_mark(self, mark):\n",
+        "        self.marks.append(mark)\n",
+        "\n",
+        "    def average(self):\n",
+        "        return sum(self.marks) / len(self.marks)\n",
+        "\n",
+        "s1 = Student(\"Alice\")\n",
+        "s1.add_mark(80)\n",
+        "s1.add_mark(90)\n",
+        "print(f\"{s1.name}'s average: {s1.average()}\")\n",
+        "print(s1)\n"
+      ],
+      "metadata": {
+        "id": "K4pf0nT_fV_A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Book:\n",
+        "    def __init__(self, title, author):\n",
+        "        self.title = title\n",
+        "        self.author = author\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        return f\"{self.title} by {self.author}\"\n",
+        "\n",
+        "b1 = Book(\"1984\", \"George Orwell\")\n",
+        "print(b1)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QstDt-rJf0AL",
+        "outputId": "c6c28e68-07c8-451e-df53-5b7c74df1cc1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1984 by George Orwell\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Some questions to try yourself**\n",
         "1. Write a for loop to print the first 10 Fibonacci numbers. (F(n+1)=F(n)+F(n-1))\n",
         "2. Generate a list of 100 random numbers and calculate the 25th, 50th, and 75th percentiles using numpy.\n",
